--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,14 @@
     <header class="header">
       <div class="logo">Users Management System</div>
       <ul class="main-navigation">
-        <a title="Show all users" href="users"><li class="main-navigation__item action-button action-button--success">Users</li></a>
-        <a title="Show all groups" href="groups"><li class="main-navigation__item action-button action-button--success">Groups</li></a>
-        <a title="Add new user" href="add-user"><li class="main-navigation__item action-button">Add User</li></a>
-        <a title="Add new group" href="add-group"><li class="main-navigation__item action-button">Add Group</li></a>
+        <a title="Show all users" href="#users"><li class="main-navigation__item action-button action-button--success">Users</li></a>
+        <a title="Show all groups" href="#groups"><li class="main-navigation__item action-button action-button--success">Groups</li></a>
+        <a title="Add new user" href="#add-user"><li class="main-navigation__item action-button">Add User</li></a>
+        <a title="Add new group" href="#add-group"><li class="main-navigation__item action-button">Add Group</li></a>
       </ul>
     </header>
 
 
-    <script data-main="assets/js_es6/app" src="assets/js_es6/require.js"></script>
+    <script async data-main="assets/js/app-built" src="assets/js/require.js"></script>
   </body>
 </html>
